force-app/main/default/objects/clofor_com_cfs__APIPerformance__c/clofor_com_cfs__APIPerformance__c.object-meta.xml
<CustomObject>
    <label>API Performance</label>
    <nameField>
        <displayFormat>APIP-{000000}</displayFormat>
        <label>API Performance ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Performance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>