force-app/main/default/objects/clofor_com_cfs__APIPerformance__c/fields/clofor_com_cfs__APIConfigID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__APIConfigID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>API CONFIG ID</label>
    <referenceTo>clofor_com_cfs__APIsConfig__c</referenceTo>
    <relationshipName>APIPerformance</relationshipName>
    <type>Lookup</type>
</CustomField>