force-app/main/default/objects/clofor_com_cfs__APIPerformance__c/fields/clofor_com_cfs__NumberOfFailTrx__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NumberOfFailTrx__c</fullName>
    <label>Number of Fail Transaction</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>