force-app/main/default/objects/clofor_com_cfs__APIPerformance__c/fields/clofor_com_cfs__ReportingDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ReportingDate__c</fullName>
    <label>Reporting Date</label>
    <type>Date</type>
</CustomField>