force-app/main/default/objects/clofor_com_cfs__APIPerformance__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__APIConfigID__c</columns>
    <columns>clofor_com_cfs__ReportingDate__c</columns>
    <columns>clofor_com_cfs__NumberOfSuccessfulTrx__c</columns>
    <columns>clofor_com_cfs__NumberOfFailTrx__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>